--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,11 +7,11 @@ pydantic==2.6.1
 pydantic-settings==2.2.1
 
 # File Processing
-unstructured==0.12.3
+unstructured==0.17.0
 python-docx==1.1.0
 PyPDF2==3.0.1
 pdfplumber==0.10.3
-mammoth==1.7.2
+mammoth==1.9.0
 beautifulsoup4==4.12.3
 python-magic==0.4.27
 markdown==3.5.2
@@ -26,6 +26,7 @@ Pillow==10.2.0
 sqlalchemy==2.0.26
 alembic==1.13.1
 psycopg2-binary==2.9.9
+pgvector>=0.2.4
 
 # Storage
 minio==7.2.3
