--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,8 +3,8 @@ fastapi==0.115.11
 uvicorn[standard]==0.26.0
 python-multipart==0.0.9
 sqlmodel==0.0.16
-pydantic==3.12.0
-pydantic-settings==2.2.1
+pydantic>=2.5.0,<3.0.0
+pydantic-settings>=2.0.0,<3.0.0
 
 # File Processing
 unstructured==0.17.0
