--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,38 +1,42 @@
 # Core
-fastapi==0.115.11
-uvicorn[standard]==0.26.0
+fastapi~=0.115.11
+uvicorn[standard]>=0.23.2
 python-multipart==0.0.9
-sqlmodel==0.0.16
-pydantic>=2.5.0,<3.0.0
-pydantic-settings>=2.0.0,<3.0.0
+sqlmodel~=0.0.16
+pydantic~=2.4.3
+pydantic-settings~=2.0.2
 
 # File Processing
-unstructured==0.17.0
-python-docx==1.1.0
-PyPDF2==3.0.1
-pdfplumber==0.10.3
-mammoth==1.9.0
-beautifulsoup4==4.12.3
-python-magic==0.4.27
-markdown==3.5.2
-html2text==2020.1.16
-ebooklib==0.18
+unstructured[all-docs]==0.17.0  # Latest version with full document support
+python-docx~=1.1.0
+PyPDF2~=3.0.1
+pdfplumber~=0.10.3
+mammoth~=1.9.0
+beautifulsoup4~=4.12.3
+python-magic~=0.4.27
+markdown~=3.5.2
+html2text~=2020.1.16
+ebooklib~=0.18
 
 # Image Processing
-Pillow==10.2.0
+Pillow~=10.2.0
 
 # Database
-sqlalchemy==2.0.39
-alembic==1.13.1
-psycopg2-binary==2.9.9
+sqlalchemy~=2.0.39
+alembic~=1.13.1
+psycopg2-binary~=2.9.9
 pgvector>=0.2.4
+asyncpg>=0.28.0
 
 # Storage
-minio==7.2.3
-redis==5.0.1
+minio~=7.2.3
+redis~=5.0.1
 
 # Utils
-python-jose[cryptography]==3.3.0
-bcrypt==4.1.2
-python-dotenv==1.0.1
-tenacity==8.2.3
+python-jose[cryptography]~=3.3.0
+bcrypt~=4.1.2
+python-dotenv~=1.0.1
+tenacity~=8.2.3
+
+# Type Hints
+typing-extensions>=4.6.2
